# hammster-fluence

./: .gitignore  error.md  fluence.yaml  package-lock.json  package.json
.fluence/: provider-artifacts.yaml  provider-secrets.yaml  workers.yaml
.fluence/aqua/: deals.aqua  services.aqua
.fluence/configs/: nox-0_Config.toml  nox-1_Config.toml  nox-2_Config.toml
client/: index-old.mjs  index.mjs
src/.cargo/: config
src/aqua/: main.aqua  test.aqua
src/compiled-aqua/: main.d.ts  main.js  main.mjs
src/services/myService/myService/: Cargo.toml
src/services/myService/myService/src/: main.rs
