[package]
name = "myService"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "myService"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = "0.14.0"
extend = "1.2.0"
halo2_proofs = { version = "0.3.0", default-features = false, features = ["dev-graph"] }
rand_core = "0.6.4"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"


[dev-dependencies]
marine-rs-sdk-test = "0.16.1"
